exprs.g4
// Gramàtica per expressions senzilles
grammar exprs;
root : expr             // l'etiqueta ja és root
     ;
expr : <assoc=right> expr '^' expr # potencia
     | expr '/' expr    # divisio
     | expr '*' expr    # producte
     | expr '+' expr    # suma
     | expr '-' expr    # resta
     | NUM              # numero
     ;
NUM : [0-9]+ ;
WS  : [ \t\n\r]+ -> skip ;
WORD : [a-zA-Z\u0080-\u00FF]+ ;
